# alphalife-maspp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
experiments/: alphalife_extensions.py  alphalife_full.py  alphalife_mas.py  alphalife_mas_plus.py  alphalife_mas_plus_state_control.py  alphalife_mas_plus_walkforward.py  alphalife_mvp.py  alphalife_strong.py  paper_artifacts.py
paper/: README.md  main.tex  references.bib
results/: README.md  maspp_state_control_bootstrap.csv  maspp_state_control_deployability.csv  maspp_state_control_downside_mechanism.csv  maspp_state_control_robustness.csv  maspp_state_control_subperiod.csv  maspp_state_control_summary.csv
scripts/: generate_synthetic_data.py  run_maspp_pipeline.sh  run_smoke_test.py  verify_result_snapshots.py
